--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,12 @@
+# See https://help.github.com/articles/ignoring-files/ for more about ignoring files.
+jsx_snippet.js
+# dependencies
 client/node_modules
 server/node_modules
+
+# package-lock.json
+client/package-lock.json
+server/package-lock.json
 
 server/config.js
 client/.env
@@ -23,3 +30,4 @@ server/.env
 npm-debug.log*
 yarn-debug.log*
 yarn-error.log*
+
