--- a/server/package.json
+++ b/server/package.json
@@ -15,13 +15,12 @@
     "express": "^4.18.2",
     "jsonwebtoken": "^8.5.1",
     "mailgen": "^2.0.27",
-    "mongodb-memory-server": "^8.10.2",
-    "mongoose": "^6.8.0",
     "morgan": "^1.10.0",
     "multer": "^1.4.5-lts.1",
     "nodemailer": "^6.8.0",
     "nodemon": "^2.0.20",
-    "otp-generator": "^4.0.0"
+    "otp-generator": "^4.0.0",
+    "pg": "^8.9.0"
   },
   "description": ""
 }
